public/scss/base/_reset.scss
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-rendering: optimizeLegibility;
  color: inherit;
  font-size: inherit;
  scroll-behavior: smooth;
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  font-size: 0.9rem; // 14px
}

#__next {
  height: 100%;
}

button {
  cursor: pointer;

  &:hover {
    opacity: 0.8;
  }
}

img {
  width: 100%;
  height: auto;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

$border-color: #f3f9f9;

.btn {
  &:focus,
  &:active,
  &:visited,
  &:active:focus,
  &:focus-within,
  &:focus-visible {
    outline: none;
    box-shadow: none;
  }
}

.form-select:disabled {
  // background-color: $background-color !important;
  border: none !important;
  cursor: not-allowed;
}

select {
  &:focus,
  &:active,
  &:visited,
  &:active:focus,
  &:focus-within,
  &:focus-visible {
    outline: none;
    box-shadow: none;
  }
}

.spinner-border {
  width: 1.45rem;
  height: 1.45rem;
  border: 0.15em solid currentColor;
  border-right-color: transparent;
}

// scrollbar reset starts
.scrollbar::-webkit-scrollbar {
  width: 5px;
  height: 4px;
}

.scrollbar::-webkit-scrollbar-track {
  background: #f5f5f5;
  border-radius: 4px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  background: transparent;
}

.scrollbar::-webkit-scrollbar-thumb {
  /* background: #d3d3d3; */
  background-color: transparent;
  height: 4px;
  border-radius: 4px;
  border-bottom-right-radius: 0;
}

.scrollbar.show::-webkit-scrollbar-thumb {
  background: #d3d3d3;
}

.scrollbar::-webkit-scrollbar-thumb:hover {
  background: #d3d3d3;
  cursor: pointer;
  transition: 0.15s ease-in-out;
  transition-delay: 0.15s;
}
// scrollbar reset ends

